--- a/actual/yatri/package.json
+++ b/actual/yatri/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "yatri",
+  "name": "yatra",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.18.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.1.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SET PORT=4000&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
